tests/pos-macros/i11835/Y.scala
object Y:
  X.blah(true) // ok
  X.blah()     // error
